[tool.poetry]
name = "mapa_de_ubicaciones"
version = "0.1.0"
description = ""
authors = ["Tu Nombre <tu@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.3.3"
Flask-SQLAlchemy = "3.1.1"
gunicorn = "21.2.0"
psycopg2-binary = "2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
